dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/enable-admission-webhook: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: dashboard.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
###
# To access to the Kubernetes Dashboard in the browser.
# Follow this path: C:\Windows\System32\drivers\etc\hosts
# Open the hosts file and add this line "127.0.0.1 dashboard.local" at the bottom of the file.
